Fix bug where horizontal scroll bar is shown

--- a/Webpage/style.css
+++ b/Webpage/style.css
@@ -13,8 +13,8 @@ body{
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
-  background-size: 100vw 100vh;
-  overflow: scroll;
+  background-size: 100% 100%;
+  overflow-y: scroll;
 }
 
 a{
